Базовые классы перенесены в модуль engine. Отрисовка задания на перемещение объектов по клику временно помещена в MenuScreen. Выполнен переход от координат объектов к векторам.

--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,21 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile project (":engine")
         
+    }
+}
+
+project(":engine") {
+    apply plugin: "java"
+
+    sourceCompatibility = 1.6
+    sourceSets.main.java.srcDirs = [ "src/" ]
+
+    dependencies {
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+
     }
 }
 
